--- a/blocks/quote/quote.css
+++ b/blocks/quote/quote.css
@@ -11,14 +11,14 @@
     text-indent: 0;
 }
 
-.block.quote > div:last-child > div {
+.block.quote>div:last-child>div {
     margin: 0 16px;
     font-size: small;
     font-style: italic;
     position: relative;
 }
 
-.block.quote > div:last-child > div::after {
+.block.quote>div:last-child>div::after {
     content: "";
     display: block;
     position: absolute;
@@ -27,7 +27,9 @@
     height: 5px;
     width: 30px;
     background-color: darkgray;
-}.block.quote {
+}
+
+.block.quote {
     background-color: #ccc;
     padding: 0 0 24px;
     display: flex;
@@ -40,14 +42,14 @@
     text-indent: 0;
 }
 
-.block.quote > div:last-child > div {
+.block.quote>div:last-child>div {
     margin: 0 16px;
     font-size: small;
     font-style: italic;
     position: relative;
 }
 
-.block.quote > div:last-child > div::after {
+.block.quote>div:last-child>div::after {
     content: "";
     display: block;
     position: absolute;
